Switched to saving binaries to MongoDB, Date
+ deleted CollectionFS code
+ added remove button
+ added createdAt field
+ inverse sorting by date
+ small CSS improvements

--- a/client/index.html
+++ b/client/index.html
@@ -3,9 +3,9 @@
 </head>
 
 <body>
-	{{> pixList}}
-	{{> imagesCount}}
-	{{> pixUpload}}
-	{{> imageUpload}}
-	{{> imagesShow}}
+	<div id="container">
+		{{> pixCount}}
+		{{> pixUpload}}
+		{{> pixList}}
+	</div>
 </body>
