Started to implement pagination
+ does ‘next’ pagination
- previous pagination missing

--- a/client/templates.html
+++ b/client/templates.html
@@ -7,6 +7,14 @@
 </template>
 
 <template name="pixList">
+	<div>
+		<span class="previousPage">
+			previous
+		</span> | 
+		<span class="nextPage">
+			next
+		</span>
+	</div>
 	{{#each showPix}}
 		<div class="pixDoc">
 			<span class='remove'>Remove</span>
