Pagination going back and forth
PROBLEMS:
- client is not aware of amount of documents in db on server
- because of this it does not stop on last page of browsing if the last
page is full. In that case the client does not know if there are more
documents to display and moves to the next page. Even if it is empty.
- sorting needs to be done as well

--- a/client/templates.html
+++ b/client/templates.html
@@ -7,13 +7,9 @@
 </template>
 
 <template name="pixList">
-	<div>
-		<span class="previousPage">
-			previous
-		</span> | 
-		<span class="nextPage">
-			next
-		</span>
+	<div class="paging">
+		<span class="previous">previous</span> | 
+		<span class="next">next</span>
 	</div>
 	{{#each showPix}}
 		<div class="pixDoc">
