Pagination fix, page number
Added:
– page number is now being displayed
Fixed:
– pagination stops properly at the end (as client is now aware of the
quantity of posts on the server)
Misc:
– quick whatever edit in CSS: vertical limiting display of images so
they don’t take too much space.
– removed graphics editor packages as these are not being used at the
moment

--- a/client/templates.html
+++ b/client/templates.html
@@ -1,5 +1,5 @@
 <template name="pixCount">
-	<h1>{{posts}} Images in eboydb</h1>
+	<h1>Images in eboydb: {{posts}} / page: {{currentPage}}</h1>
 </template>
 
 <template name="pixUpload">
