--- a/client/templates.html
+++ b/client/templates.html
@@ -18,7 +18,7 @@
 				<div>{{thedate}}</div>
 			</figcaption>
 			<span class='remove'>Remove</span>
-			<img src="{{this.binary}}"><br />
+			<img src="{{this.url}}"><br />
 		</div>
 	{{/each}}
 </template>
