Clean pixel image scaling, antialiasing turned off
= perfect sharp pixel scaling for high resolution screens (as Retina)
WOW!
+ it seems as if many (if not all) ImageMagick parameters are
available! :)
– PNGs conversions with GraphicsMagick installed on the Mac did not
work (had to remove it)

--- a/client/templates.html
+++ b/client/templates.html
@@ -18,7 +18,7 @@
 				<div>{{thedate}}</div>
 			</figcaption>
 			<span class='remove'>Remove</span>
-			<img src="{{this.url}}"><br />
+			<div class="imagebox"><img src="{{this.url}}"></div>
 		</div>
 	{{/each}}
 </template>
