Add copyright, now has 2 File stores
– 2 stores for images: ScaledPix and OriginalPix
– pixList Template takes images from ScaledPix
– line of code creates metadata field and adds copyright

--- a/client/templates.html
+++ b/client/templates.html
@@ -18,7 +18,7 @@
 				<div>{{thedate}}</div>
 			</figcaption>
 			<span class='remove'>Remove</span>
-			<div class="imagebox"><img src="{{this.url}}"></div>
+			<div class="imagebox"><img src="{{this.url store='ScaledPix'}}"></div>
 		</div>
 	{{/each}}
 </template>
