--- a/client/templates.html
+++ b/client/templates.html
@@ -1,24 +1,24 @@
-<template name="pixCount">
-	<h1>Images in eboydb: {{posts}} / page: {{currentPage}}</h1>
-</template>
-
-<template name="pixUpload">
-	<input type="file" name="myFile" class="myPixInput">
-</template>
-
-<template name="pixList">
-	<div class="paging">
+<template name="home">
+	<div id="container">
+		<h1>Images in eboydb: {{posts}} / page: {{currentPage}}</h1>
+		<input type="file" name="myFile" class="myPixInput">
+		<div class="paging">
 		<span class="previous">previous</span> | 
 		<span class="next">next</span>
-	</div>
-	{{#each showPix}}
-		<div class="pixDoc">
-			<figcaption>
-				<div>_id: {{this._id}}</div>
-				<div>{{thedate}}</div>
-			</figcaption>
-			<span class='remove'>Remove</span>
-			<div class="imagebox"><img src="{{this.url store='ScaledPix'}}"></div>
 		</div>
-	{{/each}}
+		{{#each showPix}}
+			<div class="pixDoc">
+				<figcaption>
+					<div>_id: {{this._id}}</div>
+					<div>{{thedate}}</div>
+				</figcaption>
+				<span class='remove'>Remove</span>
+				<div class="imagebox"><img src="{{this.url store='ScaledPix'}}"></div>
+			</div>
+		{{/each}}
+	</div>
+</template>
+
+<template name="document">
+	DOCUMENT!
 </template>
