--- a/client/templates.html
+++ b/client/templates.html
@@ -7,9 +7,8 @@
 	</div>
 	<div class="container">
 		{{#each showPix}}
-			<span class="item">
-				<!-- <figcaption>_id: <a href="{{ pathFor 'doc' }}">{{this._id}}</a> {{thedate}} <span class='remove'>Remove</span></figcaption> -->
-				<!-- <div class="imagebox"><img src="{{ this.url store='ScaledPix' }}"></div> -->
+			<span class="item" style="background-color: {{ this.backColor }}">
+				<div class='remove'>X {{ this.backColor }}</div>
 				<a href="{{ pathFor 'doc' }}"><img src="{{ this.url store='OriginalRetinaPix' }}" width="{{ this.metadata.width }}" height="{{ this.metadata.height }}" /></a>
 			</span>
 		{{/each}}
@@ -27,10 +26,12 @@
 			<div>metadata.width: {{this.metadata.width}}, metadata.height: {{this.metadata.height}}</div>
 			<div>metadata.copyright: {{this.metadata.copyright}}</div>
 			<div>tags: {{this.tags}}</div>
+			<div>background-color: {{ this.backColor }}</div>
 		</figcaption>
-		<img src="{{ this.url store='OriginalRetinaPix' }}" width="{{ this.metadata.width }}" height="{{ this.metadata.height }}" />
+		<img style="background-color: {{ this.backColor }}" src="{{ this.url store='OriginalRetinaPix' }}" width="{{ this.metadata.width }}" height="{{ this.metadata.height }}" />
 		<form>
-			tags: <input type="text" name="tags" value="{{this.tags}}">
+			<div>tags: <input type="text" name="tags" value="{{this.tags}}"></div>
+			<div>background-color: <input type="text" name="backColor" value="{{this.backColor}}"></div>
 			<input type="submit" name="updatetags">
 		</form>
 	</div>
