--- a/client/templates.html
+++ b/client/templates.html
@@ -1,5 +1,5 @@
 <template name="home">
-	<h1>eBoy {{ postsCount }}/P{{ currentPage }}</h1>
+	<h1>eboydb {{ postsCount }}/P{{ currentPage }}</h1>
 	<input type="file" name="myFile" class="myPixInput">
 	<div class="paging">
 		<span class="previous">previous</span> | 
@@ -8,7 +8,7 @@
 	<div class="container">
 		{{#each showPix}}
 			<span class="item" style="background-color: {{ this.backColor }}">
-				<div class='remove'>X {{ this.backColor }} {{ toWidth }}px {{ factor }}</div>
+				<div class='remove'>X {{ this.backColor }} {{ toWidth }}px {{ factor }}x</div>
 				<a href="{{ pathFor 'doc' }}"><img src="{{ this.url store='OriginalPix' }}" width="{{ toWidth }}" /></a>
 			</span>
 		{{/each}}
