--- a/client/templates.html
+++ b/client/templates.html
@@ -30,8 +30,8 @@
 		<figure>
 			<!-- <img style="background-color: none" src="{{ this.url 	store='OriginalPix' }}" width="{{ this.metadata.width }}" height="{{ this.metadata.height }}" /> -->
 			<img style="background-color: none" src="{{ this.url 	store='OriginalPix' }}" width="{{ deviceDimensions.width }}" height="{{ deviceDimensions.height }}" />
-			<a href="{{ pathFor 'spriteBox' }}">
-				<img style="background-color: {{ this.metadata.backColor }}" src="{{ this.url 	store='OriginalPix' }}" width="{{ deviceDimensions.width }}" height="{{ deviceDimensions.height }}" />
+			<a href="{{ pathFor 'spriteBox' boxsize='512'}}">
+				<img style="background-color: {{ this.metadata.backColor }}" src="{{ this.url store='OriginalPix' }}" width="{{ deviceDimensions.width }}" height="{{ deviceDimensions.height }}" />
 			</a>
 
 	<figcaption>
@@ -51,58 +51,5 @@
 			<div>background-color: <input type="text" name="backColor" value="{{this.metadata.backColor}}"></div>
 			<input type="submit" name="updatetags">
 		</form>
-	</div>
-</template>
-
-<template name="spriteBox">
-	<script>
-		var myImage = new Image();
-		myImage.src="{{ this.url store='OriginalPix' }}";
-		myImage.onload = function() {
-			var c = document.getElementById("myCanvas");
-			var ctx = c.getContext("2d");
-			ctx.fillStyle = "{{ this.metadata.backColor }}";
-			ctx.fillRect(0, 0, {{ scaledSprite.widthDevice }}, {{ scaledSprite.heightDevice }});
-			ctx.imageSmoothingEnabled = false;
-			ctx.drawImage(myImage, 0, 0, {{ scaledSprite.widthDevice }}, {{ scaledSprite.heightDevice }});
-			var ratio = window.devicePixelRatio;
-			console.log('window.devicePixelRatio: ' + window.devicePixelRatio);
-	
-			// generate png from canvas
-			var foo = document.getElementById("genImg");
-			var dataURL = c.toDataURL("image/png");
-			// foo.src = imageGenerated;
-			foo.href = dataURL;
-		}
-	</script>
-	<div class="box" style="">
-		<canvas id="myCanvas" width="{{ scaledSprite.widthDevice }}" height="{{ scaledSprite.heightDevice }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;">
-			This browser does not support HTML5 canvas
-		</canvas>
-	</div>
-	<!-- <img id="genImg" src="myPicture.png" alt="Description of my picture" /> -->
-	<a id="genImg" href="">Download PNG</a>
-	<figcaption>
-		<ol>
-			<li><span class="property">name</span>: {{ this.name }}</li>
-			<li><span class="property">uploadedAt</span>: {{this.uploadedAt}}</li>
-			<li><span class="property">metadata.width</span>: {{this.metadata.width}}</li>
-			<li><span class="property">metadata.height</span>: {{this.metadata.height}}</li>
-			<li><span class="property">metadata.copyright</span>: {{this.metadata.copyright}}</li>
-			<li><span class="property">metadata.tags</span>: {{this.metadata.tags}}</li>
-			<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
-		</ol>
-		<ol>
-			<li><span class="property">scaledSprite.width</span>: {{ scaledSprite.width }}</li>
-			<li><span class="property">scaledSprite.height</span>: {{ scaledSprite.height }}</li>
-			<li><span class="property">scaledSprite.scaleFactor</span>: {{ scaledSprite.scaleFactor }}x</li>
-			<li><span class="property">window.devicePixelRatio</span>: {{ devicePixelRatio }} </li>
-			<li><span class="property">scaledSprite.widthDevice</span>: {{ scaledSprite.widthDevice }}</li>
-			<li><span class="property">scaledSprite.heightDevice</span>: {{ scaledSprite.heightDevice }}</li>
-			<li><span class="property">scaledSprite.scaleFactorDevice</span>: {{ scaledSprite.scaleFactorDevice }}x</li>
-		</ol>
-	</figcaption>
-	<div>
-		<img id="scream" src="{{ this.url store='OriginalPix' }}" width="{{ this.metadata.width }}" height="{{ this.metadata.height }}" />
 	</div>
 </template>
