--- a/client/templates.html
+++ b/client/templates.html
@@ -24,6 +24,47 @@
 	</div>
 </template>
 
+<template name="browsethumbs">
+	{{> navigation }}
+	<div class="paging">
+		<span class="previous">previous</span> | 
+		<span class="next">next</span>
+	</div>
+	<div class="container">
+		{{#each showPix}}
+
+			<script type="text/javascript">
+			
+			// generate a new myThumb variable for each thumbnail
+			var varbase = 'myThumb';
+			this[varbase+'_{{ this._id }}'] = '{{ this._id }}';			
+			myThumb_{{ this._id }} = new Image();
+			myThumb_{{ this._id }}.src = "{{ this.url store='OriginalPix' }}";
+			
+			myThumb_{{ this._id }}.onload = function() {
+				var canvas = document.getElementById('{{ this._id }}');
+				var context = canvas.getContext("2d");			
+				// context.fillStyle = '{{ this.metadata.backColor }}';
+				// context.fillRect(0, 0, '{{ this.metadata.width }}', '{{ this.metadata.height }}');
+				context.imageSmoothingEnabled = false;
+				context.drawImage(myThumb_{{ this._id }}, 0, 0, {{ scaledSprite.widthDevice }}, {{ scaledSprite.heightDevice }});
+			}
+			</script>
+
+			<div class="docbox" style="background-color: {{ this.metadata.backColor }}">
+				<div class="docinfo"><span class='remove'>X</span> {{ this.metadata.backColor }} {{ toWidth }}px {{ scaledSprite.scaleFactor }}x</div>
+				<figure>
+					<a href="{{ pathFor 'doc' }}">
+						<canvas id='{{ this._id }}' width="{{ scaledSprite.widthDevice }}" height="{{ scaledSprite.heightDevice }}" style="width:{{ scaledSprite.width }}px; height: {{ scaledSprite.height }}px;">This browser does not support HTML5 canvas</canvas>
+					</a>
+				</figure>
+			</div>
+		{{/each}}
+
+	</div>
+</template>
+
+
 <template name="doc">
 	<h1><a href="" class="goBack">eboydb</a>: {{ this._id }} </h1>
 	<div class="showDocFull">
