Tags are now stored in arrays

--- a/client/templates.html
+++ b/client/templates.html
@@ -70,22 +70,21 @@
 			<a href="{{ pathFor 'spriteBox' boxsize='512'}}">
 				<img style="background-color: {{ this.metadata.backColor }}" src="{{ this.url store='OriginalPix' }}" width="{{ deviceDimensions.width }}" height="{{ deviceDimensions.height }}" />
 			</a>
-
-	<figcaption>
-		<ol>
-			<li><span class="property">name</span>: {{ this.name }}</li>
-			<li><span class="property">uploadedAt</span>: {{this.uploadedAt}}</li>
-			<li><span class="property">metadata.width</span>: {{this.metadata.width}}</li>
-			<li><span class="property">metadata.height</span>: {{this.metadata.height}}</li>
-			<li><span class="property">metadata.copyright</span>: {{this.metadata.copyright}}</li>
-			<li><span class="property">metadata.tags</span>: {{this.metadata.tags}}</li>
-			<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
-		</ol>
-	</figcaption>
+			<figcaption>
+				<ol>
+					<li><span class="property">name</span>: {{ this.name }}</li>
+					<li><span class="property">uploadedAt</span>: {{this.uploadedAt}}</li>
+					<li><span class="property">metadata.width</span>: {{this.metadata.width}}</li>
+					<li><span class="property">metadata.height</span>: {{this.metadata.height}}</li>
+					<li><span class="property">metadata.copyright</span>: {{this.metadata.copyright}}</li>
+					<li><span class="property">metadata.tags</span>: {{this.metadata.tags}}</li>
+					<li><span class="property">metadata.backColor</span>: {{ this.metadata.backColor }}</li>
+				</ol>
+			</figcaption>
 		</figure>
 		<form>
-			<div>tags: <input type="text" name="tags" value="{{this.metadata.tags}}"></div>
-			<div>background-color: <input type="text" name="backColor" value="{{this.metadata.backColor}}"></div>
+			<div>add tags: <input type="text" name="tags" value=""></div>
+			<div>background-color: <input type="text" name="backColor" value="{{ this.metadata.backColor }}"></div>
 			<input type="submit" name="updatetags">
 		</form>
 	</div>
